Fixes lock button on Firefox.

--- a/wagtail/admin/static_src/wagtailadmin/scss/components/_formatters.scss
+++ b/wagtail/admin/static_src/wagtailadmin/scss/components/_formatters.scss
@@ -98,7 +98,7 @@
     border: 1px solid lighten($color-grey-2, 30%);
     color: lighten($color-grey-2, 30%);
     -webkit-font-smoothing: auto;
-    line-height: 1.9em;
+    line-height: 19px;
     font-size: 0.8em;
     margin: 0 0.5em 0.5em;
     background: #fff url('#{$images-root}bg-dark-diag.svg');
